--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -72,19 +72,19 @@
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.collapseByDefault" /></div>
   </div>
   <div ng-if="display.extendable" class="bootstrap-iso rowFlex">
-    <div class="row-cell row-cell-label">{{$root.i18n('use_old_accordeon_style')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.oldAccordeonStyle" /></div>
+    <div class="row-cell row-cell-label">{{$root.i18n('right_text_expand_button')}} :&nbsp;</div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="display.rightExpandButton" /></div>
   </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('type')}} :</div>
     <div class="row-cell row-cell-value">
       <select ng-model="display.type">
-        <option value="favorite">{{$root.i18n('favorite')}} </option>
-        <option value="quicklink">{{$root.i18n('quicklink')}} </option>
-        <option value="evolve_view">{{$root.i18n('evolve_view')}} </option>
-        <option value="object_description">{{$root.i18n('object_description')}} </option>
-        <option value="last_modified_object">{{$root.i18n('last_modified_object')}} </option>
-        <option value="links_in_bloc">Links In Box </option>
+        <option value="favorite">{{$root.i18n('favorite')}}</option>
+        <option value="quicklink">{{$root.i18n('quicklink')}}</option>
+        <option value="evolve_view">{{$root.i18n('evolve_view')}}</option>
+        <option value="object_description">{{$root.i18n('object_description')}}</option>
+        <option value="last_modified_object">{{$root.i18n('last_modified_object')}}</option>
+        <option value="links_in_bloc">Links In Box</option>
       </select>
     </div>
   </div>
