fix direction in expend button

--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -13,13 +13,13 @@
           <i
             ng-if="display.extended === false"
             class="fa expendIcon"
-            ng-class="{'fa-angle-down':!display.rightExpandButton, 'fa-caret-square-o-up': display.rightExpandButton}"
+            ng-class="{'fa-angle-right':!display.rightExpandButton, 'fa-caret-square-o-left': display.rightExpandButton}"
             aria-hidden="true"
           ></i>
           <i
             ng-if="display.extended === true"
             class="fa expendIcon"
-            ng-class="{'fa-angle-up': !display.rightExpandButton, 'fa-caret-square-o-down': display.rightExpandButton}"
+            ng-class="{'fa-angle-down': !display.rightExpandButton, 'fa-caret-square-o-down': display.rightExpandButton}"
             aria-hidden="true"
           ></i>
         </span>
