--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -4,7 +4,7 @@
       <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/homePage_description.ng.html'"></div>
     </div>
   </div>
-  <div class="rowFlex bootstrap-iso">
+  <div ng-if="!monMenuOff" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_remove_my_menu')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
       <input ng-model="ng.config.removeMyMenu" type="checkbox" />
