--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -53,6 +53,7 @@
           ng-include
           src="'../../common/html/homePage/linksInBox.ng.html'"
         ></div>
+        <div class="homePage_carrousel" ng-if="display.type==='carrousel'" ng-include src="'../../common/html/homePage/carrousel.ng.html'"></div>
       </div>
     </div>
   </div>
