adding carroussel for actiononobjectpage

--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -131,7 +131,7 @@
           <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
         </div>
       </div>
-      <div ng-if="op.actionType !== 'displaymsg'">
+      <div ng-if="op.actionType !== 'displaymsg' && op.carrousel !== 'displaymsg'">
         <div class="rowFlex bootstrap-iso">
           <div class="row-cell row-cell-label">{{$root.i18n('hideElement_type')}} :&nbsp;</div>
           <div class="row-cell row-cell-value">
@@ -251,7 +251,8 @@
           </div>
         </div>
       </div>
+      <div ng-include src="'../../common/html/coffee/actionOnObjectPage_carrousel.ng.html'" ng-if="op.actionType === 'carrousel'"></div>
     </div>
+    <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
   </div>
-  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
