--- a/angularHTMLayout/coffee/cwWorkflow_formInput.ng.html
+++ b/angularHTMLayout/coffee/cwWorkflow_formInput.ng.html
@@ -46,7 +46,7 @@
   ng-if="input.type === 'property' && cwApi.mm.getProperty(ng.selectedObjectTypeScriptname,input.scriptname).type === 'Lookup'"
   class="row bootstrap-iso"
 >
-  <div class="row-cell row-cell-label labelTitle">{{$root.i18n('view_to_activate_duplicate_button')}} :</div>
+  <div class="row-cell row-cell-label labelTitle">{{$root.i18n('disable_lookup')}} :</div>
 </div>
 <div
   ng-if="input.type === 'property' && cwApi.mm.getProperty(ng.selectedObjectTypeScriptname,input.scriptname).type === 'Lookup'"
