--- a/angularHTMLayout/cwWorkflow/stepInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/stepInput.ng.html
@@ -1,16 +1,16 @@
 <div class="label">{{stepConfiguration.label}} :&nbsp;</div>
 <select
-  ng-if="stepConfiguration.type == 'cw_user'"
+  ng-if="!stepConfiguration.creator"
   ng-disabled="stepConfiguration.readOnly"
   ng-required="stepConfiguration.mandatory"
   ng-model="ng.stepmapping[stepConfiguration.stepName]"
   data-width="150px"
   data-live-search="true"
   id="{{'cwuser_' + $index}}"
-  ng-init="bootstrapFilter('cwuser_' + $index,ng.stepmapping[stepConfiguration.stepName],getStepValue(stepConfiguration))"
+  ng-init="initValueOfStepmapping(stepConfiguration,$index)"
 >
   <option value=""></option>
-  <option ng-selected="cwUser.object_id == getStepValue(stepConfiguration)" value="{{cwUser.object_id}}" ng-repeat="cwUser in ng.cwUsers">
-    {{cwUser.name}}
-  </option>
+  <option value="{{k}}" ng-selected="k == stepConfiguration.cwRole" ng-repeat="(k,v) in cwApi.cwConfigs.RoleNameById">{{v}}</option>
 </select>
+<span class="value" ng-if="stepConfiguration.creator === true && !ng.stepmapping.creator"> {{cwApi.cwUser.GetCurrentUserFullName()}} </span>
+<span class="value" ng-if="stepConfiguration.creator === true && ng.stepmapping.creator"> {{ng.stepmapping.creator}} </span>
