--- a/angularHTMLayout/cwWorkflow/formInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/formInput.ng.html
@@ -21,3 +21,10 @@
   ng-if="formInput.type == 'objectType'"
   src="'../../common/html/cwWorkflow/objectTypeInput.ng.html'"
 ></div>
+<div
+  class="input bootstrap-iso"
+  ng-init="getAssociationList(formInput)"
+  ng-include
+  ng-if="formInput.type == 'association'"
+  src="'../../common/html/cwWorkflow/associationTypeInput.ng.html'"
+></div>
