--- a/angularHTMLayout/cwWorkflow/workflow.ng.html
+++ b/angularHTMLayout/cwWorkflow/workflow.ng.html
@@ -1,5 +1,6 @@
 <div ng-controller="workflow">
-  <form name="workFlowItem">
+  <div ng-include src="'../../common/html/cwWorkflow/header.ng.html'"></div>
+  <form ng-if="ng.canEdit" name="workFlowItem">
     <div
       ng-include
       ng-if="checkFilter(formInput)"
@@ -24,4 +25,5 @@
       />
     </div>
   </form>
+  <div ng-if="!ng.canEdit">{{$root.i18n('cannotEditThisWorkflow')}}</div>
 </div>
