--- a/angularHTMLayout/cwWorkflow/header.ng.html
+++ b/angularHTMLayout/cwWorkflow/header.ng.html
@@ -7,3 +7,6 @@
     >
   </li>
 </ul>
+<div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
+  {{ng.scenario}} : {{ng.currentStep.label}} {{ng.otherUsers}}</span>
+</div>
