--- a/angularHTMLayout/cwWorkflow/propertyInput.ng.html
+++ b/angularHTMLayout/cwWorkflow/propertyInput.ng.html
@@ -1,10 +1,15 @@
 <div class="label">{{getPropertyName(formInput.scriptname)}} :&nbsp;</div>
-<span class="value" ng-if="formInput.value && formInput.readOnly && getPropertyDataType(ng.objectType, formInput.scriptname) !=='lookup'">
+<span
+  class="value"
+  ng-if="formInput.value && formInput.readOnly && getPropertyDataType(ng.objectType, formInput.scriptname) !=='lookup' && getPropertyDataType(ng.objectType, formInput.scriptname) !=='date'"
+>
   {{ng.changeset.properties[formInput.scriptname]}}
 </span>
 <span class="value" ng-if="formInput.value && formInput.readOnly && getPropertyDataType(ng.objectType, formInput.scriptname)==='lookup' ">
-  {{getLookupLabel(ng.objectType.properties[formInput.scriptname],ng.changeset.properties[formInput.scriptname])}}
+  {{cwApi.updateUndefinedForLookupIfRequired(getLookupLabel(ng.objectType.properties[formInput.scriptname],ng.changeset.properties[formInput.scriptname]))
+  }}
 </span>
+
 <input
   class="value"
   ng-readonly="formInput.readOnly"
@@ -32,10 +37,11 @@
 <input
   ng-readonly="formInput.readOnly"
   ng-required="formInput.mandatory"
-  ng-model="ng.changeset.properties[formInput.scriptname]"
-  type="date"
   class="value"
-  ng-if="(!formInput.value || !formInput.readOnly) && getPropertyDataType(ng.objectType, formInput.scriptname)==='date'"
+  type="date"
+  ng-model="ng.changeset.properties[formInput.scriptname]"
+  format-date
+  ng-if="getPropertyDataType(ng.objectType, formInput.scriptname)==='date'"
 />
 <input
   ng-readonly="formInput.readOnly"
